--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /tmp
 /out-tsc
 /bazel-out
+/src/environments/*
+.env*
 
 # Node
 /node_modules
@@ -28,6 +30,7 @@ yarn-error.log
 !.vscode/extensions.json
 .history/*
 
+
 # Miscellaneous
 /.angular/cache
 .sass-cache/
@@ -40,3 +43,5 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+package-lock.json
+package-lock.json
